--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ zotero_username: # your zotero username
 
 
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  I would be happy to hear from you! Please feel free to contact me via email or Telegram.
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
