--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: blank # the website title (if blank, full name will be used instead)
+title: blank
 first_name: Maria
 middle_name:
 last_name: Levchenko
@@ -12,10 +12,10 @@ description: > # the ">" symbol means to ignore newlines until "footer_text:"
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
-keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
-lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+keywords: NLP, machine learning, generative AI, natural language processing
+lang: en, ru # the language of your site (for example: en, fr, cn, ru, etc.)
+icon: ☮️
+#⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://mary-lev.github.io # the base hostname & protocol for your site
 baseurl:
