--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,12 +1,9 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - mary-lev
 
 github_repos:
-  - alshedivat/al-folio
-  - twbs/bootstrap
-  - jekyll/jekyll
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - jpswalsh/academicons
-  - mathjax/MathJax
+  - mary-lev/Lenta.Ru-News-Dataset
+  - mary-lev/spblitguide
+  - mary-lev/kamen
+  - mary-lev/banksy
+  - LeggoManzoni/leggomanzoni
