--- a/_config.yml
+++ b/_config.yml
@@ -258,7 +258,7 @@ jekyll-archives:
     category: "/blog/category/:name/"
 
 display_tags: ["NLP", "word2vec", "NER", "KMeans", "classification"] # these tags will be displayed on the front page of your blog
-display_categories: ["talks"] # these categories will be displayed on the front page of your blog
+#display_categories: ["talks"] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
